--- a/TSFGRIP-Task-2/TSFGRIP-Task-2.ipynb
+++ b/TSFGRIP-Task-2/TSFGRIP-Task-2.ipynb
@@ -5,6 +5,7 @@
    "metadata": {},
    "source": [
     "<h3>Task 2: Prediction using Unsupervised ML</h3>\n",
+    "<h4>By Jie Guang</h4>\n",
     "<p>\n",
     "\n",
     "<a href=\"https://bit.ly/3kXTdox\">Link to Data</a>\n",
